change some words

--- a/app_dojo/20140327.html
+++ b/app_dojo/20140327.html
@@ -196,7 +196,7 @@
                 <script type="text/template">
                     ## 結果
 
-                    手元の環境で2秒くらいで終わった ＼(^o^)／
+                    手元の環境で2秒くらい(約150倍速)で終わった ＼(^o^)／
 
                     削除した結果↓
 
@@ -262,7 +262,7 @@
 
                 <section data-markdown>
                 <script type="text/template">
-                    ## com.android.tools.lint.checks;
+                    ## com.android.tools.lint.checks.UnusedResourceDetector;
 
                     ### fields
 
