--- a/app_dojo/20140423.html
+++ b/app_dojo/20140423.html
@@ -150,6 +150,17 @@
 
                 <section data-markdown>
                 <script type="text/template">
+                    ## 注意点
+
+                    [クラスメソッドの解説ページ](http://dev.classmethod.jp/references/ios7-ibeacon-api/)をそのまま写しても意図する挙動が得られません
+
+                    起動時にビーコンが近くにあるとうまく動かないので、こちらの記事([iBeacon Tips: 正しいビーコン監視方法](http://brightechno.com/blog/archives/220))を参考に修正する必要があります
+
+                </script>
+                </section>
+
+                <section data-markdown>
+                <script type="text/template">
                     ## Androidでもいける
 
                     [Android Beacon Library](http://developer.radiusnetworks.com/ibeacon/android/configure.html)
@@ -169,6 +180,16 @@
                 <section data-markdown>
                 <script type="text/template">
                     ## Demo
+                </script>
+                </section>
+
+                <section data-markdown>
+                <script type="text/template">
+                    ## Demo Apps
+
+                    * [Beacon アプリ](https://github.com/punchdrunker/BeaconSender)
+                    * [Beacon 検出アプリ - iOS](https://github.com/punchdrunker/BeaconReceiver)
+                    * [Beacon 検出アプリ - Android](https://github.com/punchdrunker/BeaconReceiverForAndroid)
                 </script>
                 </section>
 
