--- a/app_dojo/20140423.html
+++ b/app_dojo/20140423.html
@@ -156,6 +156,8 @@
 
                     起動時にビーコンが近くにあるとうまく動かないので、こちらの記事([iBeacon Tips: 正しいビーコン監視方法](http://brightechno.com/blog/archives/220))を参考に修正する必要があります
 
+                    その他の注意などはこちらの記事([iBeacon開発ハマリどころポイントまとめ](http://qiita.com/himara2/items/1d6c11a4d4839c3027d5))が参考になりました
+
                 </script>
                 </section>
 
