--- a/golang/20140820.html
+++ b/golang/20140820.html
@@ -48,6 +48,27 @@
                 </section>
 
                 <section>
+                <h2>Materials</h2>
+                <ul>
+                    <li><a href="http://golang.org/">golang.org</a></li>
+                    <li><a href="http://go-tour-jp.appspot.com/#1">A Tour of Go</a></li>
+                    <li><a href="http://golang.org/doc/articles/wiki/">Writing Web Applications</a></li>
+                    <li><a href="http://golang.org/pkg/html/template/">html/template</a></li>
+                    <li><a href="https://github.com/coopernurse/gorp">gorp</a></li>
+                    <li><a href="http://goconvey.co/">GoConvey</a></li>
+                </ul>
+                </section>
+
+                <section>
+                <h2>WAFs</h2>
+                <ul>
+                    <li><a href="http://revel.github.io/">Revel</a></li>
+                    <li><a href="http://martini.codegangsta.io/">Martini</a></li>
+                    <li><a href="http://gin-gonic.github.io/gin/">Gin(gin-gonic)</a></li>
+                </ul>
+                </section>
+
+                <section>
                 <h2>DEMO</h2>
                 </section>
 
